--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
-    <header>
+    <head>
         <meta charset="utf-8"/>
         <title>Phuong Thao Do</title>
-    </header>
+    </head>
     <body>
-        <img src="img/ThaoDo.jpg" width="160" height="200">
+        <img src="img/ThaoDo.jpg" width="160" height="200" alt="thaodo">
         <h1>Phuong Thao, Do</h1>
         <ul>
             <li>W1D1 - Home page</li>
@@ -16,7 +16,7 @@
             <li>W1D6 - Movie review PhP</li>
         </ul>
         <a href="https://validator.w3.org/nu/?doc=http://phuongthao-do.github.io">
-            <img src="https://manalabs.org/img/w3c-html.png" />
+            <img src="https://manalabs.org/img/w3c-html.png" alt="validator"/>
         </a>
     </body>
 </html>
