--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8"/>
         <title>Phuong Thao Do</title>
@@ -15,7 +15,7 @@
             <li>W1D5 - MP3 library</li>
             <li>W1D6 - Movie review PhP</li>
         </ul>
-        <a href="https://validator.w3.org/nu/?doc=http://phuongthao-do.github.io">
+        <a href="https://validator.w3.org/nu/?doc=https://phuongthao-do.github.io">
             <img src="https://manalabs.org/img/w3c-html.png" alt="validator"/>
         </a>
     </body>
