--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
         <img src="img/ThaoDo.jpg" width="160" height="200" alt="thaodo">
         <h1>Phuong Thao, Do</h1>
         <ul>
-            <li>W1D1 - Home page</li>
-            <li>W1d2 - About me</li>
-            <li>W1D3 - Receipe</li>
-            <li>W1D4 - Movie review</li>
-            <li>W1D5 - MP3 library</li>
-            <li>W1D6 - Movie review PhP</li>
+            <li><a href="/">W1D1 - Home page</a></li>
+            <li><a href="D2/Lab2/about.html">W1d2 - About me</a></li>
+            <li><a href="D2/Ass1/pie.html">W1D2 - Receipe</a></li>
+            <li><a href="D2/Ass2/tmnt.html">Movie review</a></li>
+            <li><a>W1D4 - Movie review</a>></li>
+            <li><a>W1D5 - MP3 library</a></li>
+            <li><a>W1D6 - Movie review PhP</a></li>
         </ul>
         <a href="https://validator.w3.org/nu/?doc=https://phuongthao-do.github.io">
             <img src="https://manalabs.org/img/w3c-html.png" alt="validator"/>
