update validator web url

--- a/D2/Lab2/about.html
+++ b/D2/Lab2/about.html
@@ -41,10 +41,10 @@
         </div>
         <h4 class="text-center">Introduction about my neighbor</h4>
         <p>His name is Tung, he is a kind person and he support me a lot when I come to the US. Also, he is driver as he is willing for take me to places which I ask him. I would like to say to him "Thank you, Tung!!"</p>
-        <a href="https://validator.w3.org/nu/?doc=<url of your page>">
+        <a href="https://validator.w3.org/nu/?doc=https://phuongthao-do.github.io/D2/Lab2/about.html">
             <img src="https://manalabs.org/img/w3c-html.png" alt="validatorhtml"/>
         </a>
-        <a href="http://jigsaw.w3.org/css-validator/validator?uri=<url of your page>">
+        <a href="http://jigsaw.w3.org/css-validator/validator?uri=https://phuongthao-do.github.io/D2/Lab2/about.html">
             <img src="http://mumstudents.org/cs472/2013-09/images/w3c-css.png" alt="validatorcss"/>
         </a>
     </body>
