--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <li><a href="/">W1D1 - Home page</a></li>
             <li><a href="D2/Lab2/about.html">W1d2 - About me</a></li>
             <li><a href="D2/Ass1/pie.html">W1D2 - Receipe</a></li>
-            <li><a href="D2/Ass2/tmnt.html">Movie review</a></li>
+            <li><a href="D2/Ass2/tmnt.html">W1D2 - Movie review</a></li>
             <li><a>W1D4 - Movie review</a>></li>
             <li><a>W1D5 - MP3 library</a></li>
             <li><a>W1D6 - Movie review PhP</a></li>
@@ -20,4 +20,4 @@
             <img src="https://manalabs.org/img/w3c-html.png" alt="validator"/>
         </a>
     </body>
-</html>
+</html> 
