--- a/D2/Ass1/pie.html
+++ b/D2/Ass1/pie.html
@@ -79,10 +79,10 @@
             <a href="pie.html">Home</a>
         </p>
         <p>
-            <a href="https://validator.w3.org/nu/?doc=<url of your page>">
+            <a href="https://validator.w3.org/nu/?doc=https://phuongthao-do.github.io/D2/Ass1/pie.html">
                 <img src="https://manalabs.org/img/w3c-html.png" alt="validatorhtml">
             </a>
-            <a href="http://jigsaw.w3.org/css-validator/validator?uri=<url of your page>">
+            <a href="http://jigsaw.w3.org/css-validator/validator?uri=https://phuongthao-do.github.io/D2/Ass1/pie.html">
                 <img src="http://mumstudents.org/cs472/2013-09/images/w3c-css.png" alt="validatorcss">
             </a>
         </p>
