--- a/D2/Ass1/pie.html
+++ b/D2/Ass1/pie.html
@@ -78,7 +78,7 @@
             <a href="http://www.google.com/search?q=lemon+meringue+pie+recipe&start=10">Search for other lemon meringue pie recipes</a><br>
             <a href="pie.html">Home</a>
         </p>
-        <p>
+        <p class="align-right">
             <a href="https://validator.w3.org/nu/?doc=https://phuongthao-do.github.io/D2/Ass1/pie.html">
                 <img src="https://manalabs.org/img/w3c-html.png" alt="validatorhtml">
             </a>
@@ -86,8 +86,8 @@
                 <img src="http://mumstudents.org/cs472/2013-09/images/w3c-css.png" alt="validatorcss">
             </a>
         </p>
-        <p>
-            Copyright © 2012 Granny's Pies |<br>
+        <p class="align-right">
+            Copyright © 2012 Granny's Pies  |<br>
             A Granny's Pies Production      |<br>
             All rights reserved             |<br>
         </p>
