--- a/onClass.html
+++ b/onClass.html
@@ -1,13 +1,14 @@
 <html>
     <head>
         <meta charset="utf-8"/>
-        <title>Practice on class</title>
+        <title>ON CLASS</title>
         <link href="style.css" rel="stylesheet">
+        <script src="script.js"></script>
     </head>
     <body>
         <!-- <div id="item1">Check check item 1---</div>hi everyone
         <div id="item2">Check check item 2---</div> I'm here -->
-        <p id="check-align">Each review is a box with a quote<img src="img/background.jpeg" width="150"> about the movie, in bold 8pt font. The quote box has a background color of #E8DC9B, and a gray border, 2px thick with a 10px round radius. 8px separate the quote box's content from its border. Eachboxhasanicon(fresh.giforrotten.gif)</p>
+        <!-- <p id="check-align">Each review is a box with a quote<img src="img/background.jpeg" width="150"> about the movie, in bold 8pt font. The quote box has a background color of #E8DC9B, and a gray border, 2px thick with a 10px round radius. 8px separate the quote box's content from its border. Eachboxhasanicon(fresh.giforrotten.gif)</p> -->
         <div id="container">
             <div id="navigation">
                 <span>Home page</span><br>
