--- a/onClass.html
+++ b/onClass.html
@@ -6,29 +6,12 @@
         <script src="script.js"></script>
     </head>
     <body>
-        <!-- <div id="item1">Check check item 1---</div>hi everyone
-        <div id="item2">Check check item 2---</div> I'm here -->
-        <!-- <p id="check-align">Each review is a box with a quote<img src="img/background.jpeg" width="150"> about the movie, in bold 8pt font. The quote box has a background color of #E8DC9B, and a gray border, 2px thick with a 10px round radius. 8px separate the quote box's content from its border. Eachboxhasanicon(fresh.giforrotten.gif)</p> -->
-        <div id="container">
-            <div id="navigation">
-                <span>Home page</span><br>
-                <span>Home page</span><br>
-                <span>Home page</span><br>
-                <span>Home page</span><br>
-            </div>
-            <div id="sidebar">
-                <span>GO left</span><br>
-                <span>GO left</span><br>
-                <span>GO left</span><br>
-                <span>GO left</span><br>
-                <span>GO left</span><br>
-            </div>
-            <div id="content">
-                Each review is a box with a quote about the movie, in bold 8pt font. The quote box has a background color of #E8DC9B, and a gray border, 2px thick with a 10px round radius. 8px separate the quote box's content from its border. Eachboxhasanicon(fresh.giforrotten.gif)forwhetherthereviewerlikedordislikedthemovieonthe left side of the quote box, with 5px separating it from text to its right. Text wraps around the images as needed.
-            </div>
-            <div id="footer">
-                Each review is a box with a quote about the movie, in bold 8pt font. The quote box has a background color of #E8DC9B, and a gray border, 2px thick with a 10px round radius. 8px separate the quote box's content from its border. Eachboxhasanicon(fresh.giforrotten.gif)forwhetherthereviewerlikedordislikedthemovieonthe left side of the quote box, with 5px separating it from text to its right. Text wraps around the images as needed.
-            </div>
+        <div id="nameDiv">
+            <div id="o">Open...Open...</div>
+            <input type="text" id="name" name="name">Name</input>
+            <button id="myBtn" onclick="changeColor()">Click me</button>
         </div>
+        <div id="div2"></div>
+ 
     </body>
 </html>
