--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
             <li><a href="D2/Ass1/pie.html">W1D2 - Receipe</a></li>
             <li><a href="D2/Ass2/tmnt.html">W1D2 - Movie review</a></li>
             <li><a href="D3/responsive.html">W1D3 - Responsive</a></li>
-            <li><a href="D4/praticeJavascript.html">W1D4 - praticeJavascript</a></li>
+            <li><a href="D4/praticeJavascript.html">W1D4 - Pratice JavaScript</a></li>
+            <li><a href="D5/ascii.html">W1D5 - ASCII animation</a></li>
             <li><a>W1D6 - Movie review PhP</a></li>
         </ul>
         <a href="https://validator.w3.org/nu/?doc=https://phuongthao-do.github.io">
