--- a/D5/ascii.html
+++ b/D5/ascii.html
@@ -86,7 +86,7 @@
                 <img src="http://mumstudents.org/cs472/2013-09/images/w3c-css.png" alt="Valid CSS!"></a><br>
 
             <a href="http://mumstudents.org/jshint/check.php?uri=https://phuongthao-do.github.io/D5/ascii.html">
-		<img src="jslint.png" alt="JavaScript Lint">
+		<img src="http://mumstudents.org/jscheck/jscheck-small.png" alt="JavaScript Lint">
 			</a>
 
 
