--- a/index.html
+++ b/index.html
@@ -8,14 +8,24 @@
         <img src="img/ThaoDo.jpg" width="160" height="200" alt="thaodo">
         <h1>Phuong Thao, Do</h1>
         <ul>
-            <li><a href="/">W1D1 - Home page</a></li>
-            <li><a href="D2/Lab2/about.html">W1d2 - About me</a></li>
-            <li><a href="D2/Ass1/pie.html">W1D2 - Receipe</a></li>
-            <li><a href="D2/Ass2/tmnt.html">W1D2 - Movie review</a></li>
-            <li><a href="D3/responsive.html">W1D3 - Responsive</a></li>
-            <li><a href="D4/praticeJavascript.html">W1D4 - Pratice JavaScript</a></li>
-            <li><a href="D5/ascii.html">W1D5 - ASCII animation</a></li>
-            <li><a>W1D6 - Movie review PhP</a></li>
+            <li>W1
+                <ol>
+                    <li><a href="/">W1D1 - Home page</a></li>
+                    <li><a href="D2/Lab2/about.html">W1d2 - About me</a></li>
+                    <li><a href="D2/Ass1/pie.html">W1D2 - Receipe</a></li>
+                    <li><a href="D2/Ass2/tmnt.html">W1D2 - Movie review</a></li>
+                    <li><a href="D3/responsive.html">W1D3 - Responsive</a></li>
+                    <li><a href="D4/praticeJavascript.html">W1D4 - Pratice JavaScript</a></li>
+                    <li><a href="D5/ascii.html">W1D5 - ASCII animation</a></li>
+                </ol>
+            </li>
+            <li>W2
+                <ol>
+                    <li><a href="D6/praticeJavascript.html">W2D1 - Functional Programming</a></li>
+                    <li><a href="D6/register.html">W2D1 - Regular Expressions - Register</a></li>
+                    <li><a href="D6/productForm.html">W2D1 - Regular Expressions - New product</a></li>
+                </ol>
+            </li>
         </ul>
         <a href="https://validator.w3.org/nu/?doc=https://phuongthao-do.github.io">
             <img src="https://manalabs.org/img/w3c-html.png" alt="validator"/>
