--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                     <li><a href="D6/praticeJavascript.html">W2D1 - Functional Programming</a></li>
                     <li><a href="D6/register.html">W2D1 - Regular Expressions - Register</a></li>
                     <li><a href="D6/productForm.html">W2D1 - Regular Expressions - New product</a></li>
+                    <li><a href="W2D4/inheritance.html">W2D4 - Inheritance</a></li>
                 </ol>
             </li>
         </ul>
