--- a/onClass.html
+++ b/onClass.html
@@ -1,17 +1,28 @@
+<!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8"/>
-        <title>ON CLASS</title>
-        <link href="style.css" rel="stylesheet">
-        <script src="script.js"></script>
-    </head>
-    <body>
-        <div id="nameDiv">
-            <div id="o">Open...Open...</div>
-            <input type="text" id="name" name="name">Name</input>
-            <button id="myBtn" onclick="changeColor()">Click me</button>
-        </div>
-        <div id="div2"></div>
- 
-    </body>
+  <head>
+    <title>WAP OnClass</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mocha/3.2.0/mocha.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mocha/3.2.0/mocha.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chai/3.5.0/chai.js"></script>
+    <script>
+    //   initialize mocha mocha.setup('bdd'); // chai has a lot of stuff, let's make assert global let assert = chai.assert; 
+    </script>
+    <script>
+      // write your code for the function longestNoSapce() here // remember it can take any amount of strings! 
+      function longestNoSpace(...arr){
+        return arr.reduce((longest,text) => (text.length > longest.length?text: longest)); 
+        }
+    </script>
+    <script src="script.js"></script>
+    
+  </head>
+  <body>
+    <button id="btn1">CLick me!!</button>
+    <div id="mocha"></div>
+    <script>
+      mocha.run();
+    </script>
+  </body>
 </html>
