--- a/practice.html
+++ b/practice.html
@@ -1,29 +1,42 @@
-<html lang="en">
-    <head>
-        <meta charset="utf-8"/>
-        <title>dont now</title>
-        <link href="style.css" rel="stylesheet"
-    </head>
-    <body>
-        <img src="img/ThaoDo.img" alt="thaoDo" width="124" height="124">
-        <h2>My name: Phuong Thao</h2>
-        <ul>
-            <li>Item 1
-                <ol>It unlink 2
-                    <li>sub1 1</li>
-                    <li>sub2</li>
-                </ol>
-            </li>
-        </ul>
-        <table>
-            <tr>
-                <th>Head 1</th>
-                <th>Head 2</th>
-            </tr>
-            <tr>
-                <td>Item 1</td>
-                <td>Item 3</td>
-            </tr>
-        </table>
-    </body>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>W2D2 Quiz</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mocha/3.2.0/mocha.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mocha/3.2.0/mocha.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chai/3.5.0/chai.js"></script>
+    <script>
+      // initialize mocha mocha.setup('bdd'); // chai has a lot of stuff, let's make assert global let assert = chai.assert; 
+    </script>
+    <script>
+      // write your code for the function longestNoSapce() here // remember it can take any amount of strings! 
+    </script>
+    <script src="script.js"></script>
+    <script>
+      describe("longestNoSpace", function() {
+        it("returns 0 if given zero parameters", () => {
+          assert.equal(longestNoSpace(), 0);
+        });
+        it("returns 0 if given a single string that contains a space", () => {
+          assert.equal(longestNoSpace("a test"), 0);
+        });
+        it("returns 0 if given only strings that contains spaces", () => {
+          assert.equal(longestNoSpace("this is", "a test"), 0);
+        });
+        it("returns the length of the string if given a single string without a space", () => {
+          assert.equal(longestNoSpace("hello"), 5);
+        });
+        it("returns the length of the longest string if given multiple strings without spaces", () => {
+          assert.equal(longestNoSpace("hello", "world!"), 6);
+        });
+      });
+    </script>
+  </head>
+  <body>
+    <div id="mocha"></div>
+    <script>
+      mocha.run();
+    </script>
+  </body>
 </html>
