--- a/onClass.html
+++ b/onClass.html
@@ -15,7 +15,7 @@
         return arr.reduce((longest,text) => (text.length > longest.length?text: longest)); 
         }
     </script>
-    <script src="script.js"></script>
+    <script src="onClass.js"></script>
     
   </head>
   <body>
