--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
                     <li><a href="W2D4/inheritance.html">W2D4 - Inheritance</a></li>
                 </ol>
             </li>
+            <li>W3
+                <ol>
+                    <li><a href="W3D1/part1/classesPart1.html">W3D1 - Classes - P1</a></li>
+                    <li><a href="W3D1/part2/BankAccounts.html">W3D1 - Classes - P2</a></li>
+                </ol>
+            </li>
         </ul>
         <a href="https://validator.w3.org/nu/?doc=https://phuongthao-do.github.io">
             <img src="https://manalabs.org/img/w3c-html.png" alt="validator"/>
