--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
                 <ol>
                     <li><a href="W3D1/part1/classesPart1.html">W3D1 - Classes - P1</a></li>
                     <li><a href="W3D1/part2/BankAccounts.html">W3D1 - Classes - P2</a></li>
+                    <li><a href="W3D2/Part1/circle.html">W3D1 - Clean Screen Lab</a></li>
+                    <li><a href="W3D2/Part2/maze.html">W3D2 - The Amazing Mouse Maze</a></li>
                 </ol>
             </li>
         </ul>
