--- a/D6/productForm.html
+++ b/D6/productForm.html
@@ -66,5 +66,16 @@
 <div id="submitStr"></div>
 </div>
 </div>
+<div id="validate">
+    <a href="https://validator.w3.org/nu/?doc=https://phuongthao-do.github.io/D6/productForm.html">
+        <img src="https://manalabs.org/img/w3c-html.png" alt="html validator">
+    </a>
+    <a href="http://jigsaw.w3.org/css-validator/validator?uri=https://phuongthao-do.github.io/D6/productForm.html">
+        <img src="http://mumstudents.org/cs472/2013-09/images/w3c-css.png" alt="Valid CSS!"></a>
+
+    <a href="http://mumstudents.org/jshint/check.php?uri=https://phuongthao-do.github.io/D6/productForm.html">
+<img src="http://mumstudents.org/jscheck/jscheck-small.png" alt="JavaScript Lint">
+    </a>
+</div>
 </body>
 </html>
