--- a/D6/register.html
+++ b/D6/register.html
@@ -4,7 +4,7 @@
     <title>W2D1 Quiz</title>
     
 
-    <link rel="stylesheet" href="W2D1Quiz_files/mocha.css">
+    <!-- <link rel="stylesheet" href="W2D1Quiz_files/mocha.css"> -->
     <link rel="stylesheet" href="register/register.css">
     <script src="W2D1Quiz_files/mocha.js"></script>
     <script src="W2D1Quiz_files/chai.js"></script>
@@ -85,6 +85,16 @@
 
     </script>
 
+<div id="validate">
+  <a href="https://validator.w3.org/nu/?doc=https://phuongthao-do.github.io/D6/register.html">
+      <img src="https://manalabs.org/img/w3c-html.png" alt="html validator">
+  </a>
+  <a href="http://jigsaw.w3.org/css-validator/validator?uri=https://phuongthao-do.github.io/D6/register.html">
+      <img src="http://mumstudents.org/cs472/2013-09/images/w3c-css.png" alt="Valid CSS!"></a>
 
+  <a href="http://mumstudents.org/jshint/check.php?uri=https://phuongthao-do.github.io/D6/register.html">
+<img src="http://mumstudents.org/jscheck/jscheck-small.png" alt="JavaScript Lint">
+  </a>
+</div>
 
 </body><grammarly-desktop-integration data-grammarly-shadow-root="true"></grammarly-desktop-integration></html>
