--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <ul>
             <li>W1
                 <ol>
-                    <li><a href="/">W1D1 - Home page</a></li>
+                    <li><a href="./index.html">W1D1 - Home page</a></li>
                     <li><a href="D2/Lab2/about.html">W1d2 - About me</a></li>
                     <li><a href="D2/Ass1/pie.html">W1D2 - Receipe</a></li>
                     <li><a href="D2/Ass2/tmnt.html">W1D2 - Movie review</a></li>
